src/objects/Program_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Goal Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <description>This field specifies the goal value for it&apos;s corresponding attribute name.</description>
        <label>Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Goals</relationshipLabel>
        <relationshipName>Program_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Program Goal</label>
    <nameField>
        <label>Program Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>